# aim

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.architecture/: overview.md  roadmap.md  security-issues.md
.audits/: 2026-03-21T02-02-28Z.md  2026-03-21T20-08-04Z-post-appimagehub-security-audit.md
.plans/000-appimage-manager/: 2026-03-19-appimage-manager-design.md  2026-03-19-appimage-manager-implementation-plan.md
.plans/001-github-source-end-to-end/: 2026-03-19-github-source-end-to-end-design.md  2026-03-19-github-source-end-to-end-implementation-plan.md
.plans/002-per-distro-installation/: 2026-03-19-per-distro-installation-design.md  2026-03-19-per-distro-installation-implementation-plan.md
.plans/005-cli-ux-progress/: 2026-03-20-cli-ux-progress-design.md  (+1 more)
crates/aim-cli/: Cargo.toml
crates/aim-cli/src/: config.rs  lib.rs  main.rs
crates/aim-cli/src/cli/: args.rs  config.rs
crates/aim-cli/src/ui/: mod.rs  progress.rs  prompt.rs  render.rs  search_browser.rs  theme.rs
crates/aim-cli/tests/: cli_commands.rs  cli_smoke.rs  config_loading.rs  end_to_end_cli.rs  search_browser.rs  search_cli.rs  ui_summary.rs
crates/aim-core/: Cargo.toml
crates/aim-core/src/: lib.rs
crates/aim-core/src/adapters/: appimagehub.rs  custom_json.rs  direct_url.rs  github.rs  gitlab.rs  mod.rs  sourceforge.rs  test_support.rs  traits.rs  zsync.rs
crates/aim-core/src/app/: add.rs  identity.rs  interaction.rs  list.rs  mod.rs  progress.rs  query.rs  remove.rs  scope.rs  search.rs  show.rs  update.rs
crates/aim-core/src/domain/: app.rs  mod.rs  search.rs  show.rs  source.rs  update.rs
crates/aim-core/src/integration/: desktop.rs  install.rs  mod.rs  paths.rs  policy.rs  refresh.rs
crates/aim-core/src/platform/: capabilities.rs  distro.rs  mod.rs
crates/aim-core/src/registry/: store.rs
crates/aim-core/src/source/: appimagehub.rs  github.rs  input.rs  mod.rs
crates/aim-core/src/update/: ranking.rs
crates/aim-core/tests/: adapter_contract.rs  adapter_smoke.rs  appimagehub_search.rs  checksum_verification.rs  download_pipeline.rs  github_add_flow.rs  github_source_discovery.rs  identity_resolution.rs  install_failures.rs  install_integration.rs  install_paths.rs  install_payload.rs  install_policy.rs  install_scope.rs  metadata_contract.rs  metadata_electron_builder.rs  metadata_zsync.rs  platform_detection.rs  query_resolution.rs  registry_roundtrip.rs  remove_flow.rs  search_github.rs  show_resolution.rs  update_planning.rs
crates/upm/: Cargo.toml
crates/upm-appimage/: Cargo.toml
crates/upm-appimage/src/: add.rs  lib.rs  search.rs
crates/upm-appimage/src/source/: appimagehub.rs  mod.rs
crates/upm-appimage/tests/: appimagehub_search.rs
crates/upm-core/: Cargo.toml
crates/upm-core/src/: lib.rs
crates/upm-core/src/adapters/: direct_url.rs  mod.rs  sourceforge.rs  traits.rs
crates/upm-core/src/app/: add.rs  application.rs  identity.rs  mod.rs  providers.rs  query.rs  search.rs  update.rs
crates/upm-core/src/domain/: app.rs  search.rs  source.rs  update.rs
crates/upm-core/src/integration/: mod.rs  paths.rs  policy.rs  refresh.rs
crates/upm-core/src/metadata/: document.rs  electron_builder.rs  mod.rs  parser.rs  zsync.rs
crates/upm-core/src/platform/: capabilities.rs  mod.rs
crates/upm-core/src/registry/: model.rs  store.rs
crates/upm-core/src/source/: appimagehub.rs  github.rs
crates/upm-core/src/update/: channels.rs  mod.rs  ranking.rs
crates/upm-core/tests/: adapter_contract.rs  adapter_smoke.rs  application_facade.rs  checksum_verification.rs  download_pipeline.rs  github_add_flow.rs  github_source_discovery.rs  identity_resolution.rs  install_failures.rs  install_integration.rs  install_paths.rs  install_payload.rs  install_policy.rs  install_scope.rs  metadata_contract.rs  metadata_electron_builder.rs  metadata_zsync.rs  platform_detection.rs  provider_registry.rs  query_resolution.rs  registry_roundtrip.rs  remove_flow.rs  search_github.rs  show_resolution.rs  update_planning.rs
crates/upm-core/tests/fixtures/: example.zsync  latest-linux.yml
crates/upm/src/: config.rs  lib.rs  main.rs  providers.rs
crates/upm/src/cli/: args.rs  config.rs
crates/upm/src/ui/: progress.rs  prompt.rs  render.rs  search_browser.rs  theme.rs
crates/upm/tests/: cli_commands.rs  cli_smoke.rs  config_loading.rs  end_to_end_cli.rs  search_browser.rs  search_cli.rs  ui_summary.rs
(+29 files in other folders)
