[workspace]
members = [
    "crates/aim-core",
    "crates/aim-cli",
]
default-members = [
    "crates/aim-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.5.32", features = ["derive"] }
assert_cmd = "2.0.16"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.19.1"
toml = "0.8.20"
