[package]
name = "aim-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "aim"
path = "src/main.rs"

[dependencies]
clap.workspace = true
dialoguer.workspace = true
console.workspace = true
indicatif.workspace = true
libc.workspace = true
serde.workspace = true
toml.workspace = true
aim-core = { path = "../aim-core" }

[dev-dependencies]
assert_cmd.workspace = true
predicates = "3.1.3"
tempfile.workspace = true
