[package]
name = "aim-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
base64.workspace = true
fs2.workspace = true
md5.workspace = true
quick-xml.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
