[package]
name = "upm-appimage"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
quick-xml.workspace = true
reqwest.workspace = true
serde.workspace = true
upm-module-api = { path = "../upm-module-api" }

[dev-dependencies]
upm-core = { path = "../upm-core" }