[package]
name = "upm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
base64.workspace = true
fs2.workspace = true
md5.workspace = true
quick-xml.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
toml.workspace = true
upm-appimage = { path = "../upm-appimage" }
upm-module-api = { path = "../upm-module-api" }

[dev-dependencies]
tempfile.workspace = true
