[package]
name = "upm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "upm"
path = "src/main.rs"

[dependencies]
clap.workspace = true
dialoguer.workspace = true
console.workspace = true
crossterm.workspace = true
indicatif.workspace = true
libc.workspace = true
ratatui.workspace = true
serde.workspace = true
toml.workspace = true
upm-appimage = { path = "../upm-appimage" }
upm-core = { path = "../upm-core" }

[dev-dependencies]
assert_cmd.workspace = true
predicates = "3.1.3"
tempfile.workspace = true
